[package]
name = "wfdiag"
version = "2.0.6"
edition = "2021"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
zip = "4.3"
walkdir = "2.5"
dirs = "6.0"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Services",
    "Win32_System_ProcessStatus"
] }
eframe = "0.32"
egui = "0.32"
wmi = "0.17"
sysinfo = "0.36"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
csv = "1.3"
libc = "0.2"